# simple-busylight

./: .gitignore  README.md  pyproject.toml  requirements.txt  supported_vendors
aur/: .install  PKGBUILD
deb/: 99-busylight.rules  simple-busylightd.service
debian/: control  posinst  sblightd.conf
scripts/: build.deb.sh  build.pyinstaller.sh
src/simple_busylight/: busylight.py  busylightd.conf  cli.py  common.py  daemon.py  daemon.py.save
src/simple_busylight/lib/: cli.py  config.py  daemon.py  worker.py
